--- a/style.css
+++ b/style.css
@@ -82,6 +82,10 @@ body {
   overflow-y: scroll;
 }
 
+.items::-webkit-scrollbar {
+  display: none;
+}
+
 .item {
   background-color: var(--color-white);
   display: flex;
